# update-modrinth-deps

./: LICENSE.txt  README.md  action.yml  main.py  pyproject.toml  renovate.json
.github/workflows/: release.yml  test.yml
example/: modrinth_deps.json  update_modrinth_deps.yml
tests/: test_branch_detection.py  test_integration.py  test_modrinth_api.py  test_unit.py
