[project]
name = "update-modrinth-deps"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5,<3",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that hit the real Modrinth API",
]

[tool.uv]
