[project]
name = "update-modrinth-deps"
version = "1.0.2"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5,<3",
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "ruff>=0.15.4,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that hit the real Modrinth API",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["F403"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
no-sections = true

[tool.uv]
